No reason to display "Done" Column on Active Patient Queue...

--- a/templates/patient_queue.html
+++ b/templates/patient_queue.html
@@ -26,7 +26,7 @@ Showing Data For:
 {% if visits %}
 <DIV STYLE="font-size: 1.2em;">Active({{num_active}}):</DIV>
 <TABLE>
-<TR><TH>Scheduled</TH><TH>Patient Id</TH><TH>Status</TH><TH>Claimed</TH><TH>Labs</TH><TH>Meds</TH><TH>Done</TH><TH>Actions</TH></TR>
+<TR><TH>Scheduled</TH><TH>Patient Id</TH><TH>Status</TH><TH>Claimed</TH><TH>Labs</TH><TH>Meds</TH><TH>Actions</TH></TR>
 {% for v in visits %}
 <TR>
 <TD>{{v.scheduledDate|date:"d-m"}} {{v.scheduledTime|time:"H:i"}}</TD>
@@ -67,7 +67,6 @@ Showing Data For:
 	{% endifequal %}
 {% endifequal %}
 </TD>
-{%if v.is_checking_out or v.is_finished %}<TD STYLE='background-color:#77FF77;'>Yes{%else%}<TD STYLE='background-color:#FFFF55;'>No{%endif%}</TD>
 <TD>
 
 <A HREF=/visit/{{v.id}}/>View-Chart</A>
