bug where it displayed lab status under med column in patient_queue fixed.

--- a/templates/patient_queue.html
+++ b/templates/patient_queue.html
@@ -60,7 +60,7 @@ Showing Data For:
 </TD>
 {% ifequal v.get_med_status 1 %}
 	<TD STYLE='background-color:#FFFF55;'>Wait</SPAN>
-{% else %}{% ifequal v.get_lab_status 2 %}
+{% else %}{% ifequal v.get_med_status 2 %}
 		<TD STYLE='background-color:#77FF77;'>Done</SPAN>
 	{% else %}
 		<TD>
