added Legacy Daily Diagnosis Report

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -8,6 +8,7 @@
 {% block content %}
 <UL>
 <LI><A HREF="#" onClick='window.open("/reports/legacy/patient/daily","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Daily Patient Report</A>
+<LI><A HREF="#" onClick='window.open("/reports/legacy/diagnosis/daily/","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Daily Diagnosis Report</A>
 {% comment %}
 <LI><A HREF="#" onClick='window.open("/reports/legacy/monthly/","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Monthly Patient Report</A>
 {% endcomment %}
