modified visit table again. This time to drop the scheduledTime attribute to Visit, and add a seenDateTime. This is to support ading a third section on the patient queue, scheduled visits...

--- a/templates/patient.html
+++ b/templates/patient.html
@@ -58,7 +58,7 @@
 <TR><TH>Reason<TH>Detail</TR>
 {% for v in visits %}
 <TR>
-   <TD>{{ v.scheduledDate|date:"d-m-Y" }} {{ v.scheduledTime|time:"H:i"}}
+   <TD>{{ v.scheduledDate|date:"d-m-Y" }}
    <TD>{{ v.scheduledBy }}
 
 	{% ifequal v.status "MISS" %}
