--- a/templates/patient_queue.html
+++ b/templates/patient_queue.html
@@ -23,13 +23,15 @@ Showing Data For:
 <A HREF=/patient_queue/{{dayoffset_next}}/>next&#62;</A>
 )
 </DIV>
+
+
 {% if visits %}
 <DIV STYLE="font-size: 1.2em;">Active({{num_active}}):</DIV>
 <TABLE>
-<TR><TH>Scheduled</TH><TH>Patient Id</TH><TH>Status</TH><TH>Claimed</TH><TH>Labs</TH><TH>Actions</TH></TR>
+<TR><TH>Seen</TH><TH>Patient Id</TH><TH>Status</TH><TH>Claimed</TH><TH>Labs</TH><TH>Actions</TH></TR>
 {% for v in visits %}
 <TR>
-<TD>{{v.scheduledDate|date:"d-m"}} {{v.scheduledTime|time:"H:i"}}</TD>
+<TD>{{v.seenDateTime|date:"d-m H:i"}}</TD>
 <TD><A HREF=/patient/{{v.patient.id}}/>{{ v.patient }}</A></TD>
 	{% ifequal v.status "MISS" %}
 		<TD STYLE='background-color:#FF5555;'>
@@ -66,12 +68,32 @@ Showing Data For:
 	| <A HREF=# onClick='window.open("/visit/{{v.id}}/finish/","Finish Visit","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Finish</A>
 {%else%}
 	| <A HREF=# onClick='window.open("/visit/{{v.id}}/claim/","Claim Patient","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Claim</A>
-	| <A HREF=# onClick='window.open("/visit/{{v.id}}/finish/","Patient Missed","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>No-Show</A>
+	| <A HREF=# onClick='window.open("/visit/{{v.id}}/unseen/","Patient Missed","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Undo-Seen</A>
 {%endif%}
 </TD>
 {% endfor %}
-{% endif %}
 </TABLE>
+{% endif %}
+
+
+
+{% if s_visits %}
+<DIV STYLE="font-size: 1.2em;">Scheduled({{num_scheduled}}):</DIV>
+<TABLE>
+<TR><TH>Scheduled</TH><TH>Patient Id</TH><TH>Actions</TH></TR>
+{% for v in s_visits %}
+<TR>
+<TD>{{v.scheduledDate|date:"d-m-Y"}}</TD>
+<TD><A HREF=/patient/{{v.patient.id}}/>{{ v.patient }}</A></TD>
+<TD><A HREF=# onClick='window.open("/visit/{{v.id}}/seen/","Seen Patient","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Seen</A>
+	| <A HREF=# onClick='window.open("/visit/{{v.id}}/finish/","Patient Missed","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>No-Show</A>
+</TR>
+{% endfor %}
+</TABLE>
+{% endif %}
+
+
+{% if r_visits %}
 <DIV STYLE="font-size: 1.2em;">Inactive({{num_inactive}}):</DIV>
 <TABLE>
 <TR><TH>Finished</TH><TH>Patient Id</TH><TH>Status</TH><TH>Finished By</TH><TH>Meds</TH><TH>Actions</TH></TR>
@@ -110,5 +132,7 @@ Showing Data For:
 	
 </TR>
 {% endfor %}
+</TABLE>
+{% endif %}
 {% endblock %}
 
