--- a/templates/patient.html
+++ b/templates/patient.html
@@ -83,6 +83,7 @@
    <TD><A HREF=/visit/{{v.id}}>View Chart</A> |
 {% ifequal v.status 'WAIT' %}
    <A HREF="#" onClick='window.open("/patient/edit_visit/{{v.id}}/","Edit Visit","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Edit</a>
+   <A HREF="#" onClick='window.open("/patient/edit_visit_seen/{{v.id}}/","Edit Visit","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Edit Seen Time</a>
 {% else %}
    <A HREF="#" onClick='window.open("/patient/edit_visit_reason/{{v.id}}/","Edit Visit Reason","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Edit Reason</a>
 {% endifequal %}
