Added Outstanding Accounts Report

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -13,7 +13,7 @@
 {% comment %}
 <LI><A HREF="#" onClick='window.open("/reports/legacy/monthly/","Get Legacy Daily Report","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Legacy Monthly Patient Report</A>
 {% endcomment %}
+<LI><A HREF="#" onClick='window.open("/reports/accounts_outstanding/","Show Outstanding Accounts","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Outstanding Accounts</A>
 </UL>
-
 {% endblock %}
 
