added patient merge functionality.

--- a/templates/popup_info.html
+++ b/templates/popup_info.html
@@ -4,6 +4,7 @@
 <PRE>
 {{ info }}
 </PRE>
+{{ link_text|safe }}
 <a href="#" onClick='opener.window.location.reload();self.close();return false;'>Close</a>
 
 {% endblock %}
