--- a/templates/patient_search.html
+++ b/templates/patient_search.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 {% block title %}Patient Search{% endblock %}
-{% block extrahead %} {{ form.media }} {%endblock%}
+{% block extrahead %}
+{{ form.media }}
+<script language="javascript" type="text/javascript">
+function formfocus() {
+        var f=document.getElementById('searchForm');
+        f.elements[0].focus();
+}
+window.onload = formfocus;
+</script>
+{%endblock%}
 {% block extraheader %}
         <A HREF=/patient_queue/>Patient Queue</A>(search,<a href=/patient/new>add</a>)|<A HREF=/lab_queue/>Lab Queue</A>|<A HREF=/med_queue/>Med Queue</A>|<A HREF=/reports/>Reports</A>
 {%endblock%}
 {% block content %}
-<form action="/patient/search/" method="POST">
+<form ID=searchForm action="/patient/search/" method="POST">
 <TABLE>
 {{ form.as_table }}
 </TABLE>
