don't allow printing of record until meds are finished.

--- a/templates/med_queue.html
+++ b/templates/med_queue.html
@@ -74,12 +74,14 @@
 		<A HREF="/meds/{{v.id}}/">View</A>
 		{% ifequal v.get_num_meds 0 %}
 		| <A HREF=# onClick='window.open("/visit/{{v.id}}/resolve/","Resolve","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Resolve</A>
+		| <A HREF=# onClick='window.open("/visit/{{v.id}}/record/print/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Print-Rec</A>
+		| <A HREF=# onClick='window.open("/visit/{{v.id}}/record/view/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>View-Rec</A>
 		{% endifequal %}
 		{% ifequal v.get_med_status 2 %}
 		| <A HREF=# onClick='window.open("/visit/{{v.id}}/resolve/","Resolve","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Resolve</A>
-		{% endifequal %}
 		| <A HREF=# onClick='window.open("/visit/{{v.id}}/record/print/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>Print-Rec</A>
 		| <A HREF=# onClick='window.open("/visit/{{v.id}}/record/view/","Print","menubar=no,width=540,height=420,toolbar=no,scrollbars=yes");'>View-Rec</A>
+		{% endifequal %}
 </TD>
 </TR>
 {% endfor %}
