fixed errors and warnings in DJANGO 1.2 dealing with cross-site scripting protection.

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<form method="post" action="">
+<form method="post" action="">{% csrf_token %}
   {{form.as_p}}
 <input type="submit" value="Login">
 </form>
