--- a/templates/popup_form.html
+++ b/templates/popup_form.html
@@ -15,7 +15,7 @@ window.onload = formfocus;
 
 {% block content %}
 <SPAN>{{title}}</SPAN>
-<form ID=popupForm action="{{ form_action }}" method="POST">
+<form ID=popupForm action="{{ form_action }}" method="POST">{% csrf_token %}
 <TABLE>
 {{ form.as_table }}
 </TABLE>
