--- a/templates/med_queue.html
+++ b/templates/med_queue.html
@@ -25,7 +25,7 @@
 </TR>
 {% for v in visits_active %}
 <TR>
-<TD>{{v.finishedDateTime|date:"d-m H:i"}}</TD>
+<TD>{{v.finishedDateTime|date:"DATETIME_FORMAT"}}</TD>
 <TD>{{v.finishedBy}}
 <TD><A HREF=/patient/{{v.patient.id}}/>{{ v.patient }}</A></TD>
 <TD>{{ v.get_num_meds }}</TD>
@@ -95,7 +95,7 @@ Resolved:
 </TR>
 {% for v in visits_inactive %}
 <TR>
-<TD>{{v.resolvedDateTime|date:"d-m H:i"}}</TD>
+<TD>{{v.resolvedDateTime|date:"DATETIME_FORMAT"}}</TD>
 <TD>{{v.resolvedBy}}
 <TD><A HREF=/patient/{{v.patient.id}}/>{{ v.patient }}</A></TD>
 <TD>{{ v.get_num_meds }}</TD>
