--- a/templates/visit_immu.html
+++ b/templates/visit_immu.html
@@ -7,7 +7,7 @@
 {% for il in immunizationLogs %}
 <DIV ID=immunizationLogs>
 <TEXTAREA DISABLED>{{il.description}}</TEXTAREA><BR>
-<SPAN ID=immunizationLogsByline>by {{il.addedBy}} on {{il.addedDateTime|date:"d-m-Y H:i"}}</SPAN>
+<SPAN ID=immunizationLogsByline>by {{il.addedBy}} on {{il.addedDateTime|date:"DATETIME_FORMAT"}}</SPAN>
 </DIV> <!-- immunizationLogs -->
 {% endfor %}
 
